go1.13: update stale pseudoversion for the hybrik-sdk-go require (#50)
* go1.13: update stale psudoversion for the hybrik-sdk-go require

* ci: update builder to use the latest version of go (1.13)

* ci: update image for deploy step

* go: update version in mod file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
 
   build:
     docker:
-      - image: zsiec/go-1-12-5-redis:latest
+      - image: zsiec/go-1-13-redis:latest
     steps:
       - run:
           name: Start redis server
@@ -21,7 +21,7 @@ jobs:
 
   deploy_dev:
     docker:
-      - image: circleci/golang:1.12.5
+      - image: circleci/golang:1.13
     steps:
       - deploy:
           name: Trigger deploy to dev
