xray: enable tracing using AWS xray (#140)
* xray: use common xray tracing package

* ci: start redis server

* ci: update builder images

* ci: remove manual redis start

* ci: supress lint for now

* ci: try installing redis via apt-get

* ci: fix bad formatting

* ci: start redis

* deps: use public libs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,11 @@ jobs:
 
   build:
     docker:
-      - image: zsiec/go-1-13-redis:latest
+      - image: circleci/golang:1.14
     steps:
+      - run:
+          name: Install redis-server executable
+          command: sudo apt-get install redis-server
       - run:
           name: Start redis server
           command: sudo service redis-server start
